# eeghdf

./: .gitignore  PLAN.md  README.md  dot.secrets.toml.template  pyproject.toml  requirements.txt  requirements_downsampling.txt  setup-dev.py  setup.py
docs/: changelog.md  cloud-support.md  data-definition.md  pypi-instructions.md  researching-file-formats.md  terminology.rst
eeghdf/: __init__.py  convert.py  eeghdf.py  reader.py  writer.py
examples/: tuh2hdf_f200hz.py
experiments/: edf2hdf1.py  eeghdf2fif.py  plans.org  save_mne_to_edf.py  test-downlsampling-viewing.py  test-eeg-resampling-up-down-sksamplerate.ipynb  test-eeg-resampling-up-down-sksamplerate.py  test-phys-signals.py  test-phys-signals2.ipynb  test-phys-signals2.py  ver1to2.py  ver2to3.py
notebooks/: stacklineplot.py  vizAbsenceSz.ipynb  vizAbsenceSzUsingEeghdf.ipynb  vizAbsenceSzUsingEeghdf.py  vizLTempSz.ipynb  vizRTempSz.ipynb  vizSpasm.ipynb
scripts/: edf2eeghdf.py  edf2eeghdf_edfio.py  tuh2hdf_f200hz.py
tests/: test_convert.py  test_reader.py  test_s3.py  testconfig.py
