[build-system]
requires = ["flit_core >=3.2,<4", "future"]
build-backend = "flit_core.buildapi"

[project]
name = "eeghdf"
authors = [{name = "Chris Lee-Messer", email = "chris@lee-messer.net"}]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"] # this means will be extracted from module docstring

classifiers = ["Intended Audience :: Science/Research","License :: OSI Approved :: BSD License", "Topic :: Scientific/Engineering :: Medical Science Apps.",  "Development Status :: 4 - Beta"]

dependencies = ["numpy", "h5py", "pandas", "future"]

[project.optional-dependencies]
mne = ["mne>=1.0"]
test = ["pytest", "dynaconf>=3.0"]
# resampling

[project.urls]
Home = "https://github.com/eegml/eeghdf"
